--- a/setup.h.in
+++ b/setup.h.in
@@ -655,7 +655,7 @@
 
 #define wxUSE_ACTIVEX 0
 
-#if defined(_MSC_VER) && _MSC_VER >= 1700
+#if defined(_MSC_VER) && _MSC_VER >= 1700 && !defined(_USING_V110_SDK71_)
     #define wxUSE_WINRT 0
 #else
     #define wxUSE_WINRT 0
