Don't check MSW-specific configure options unless targeting MSW
This doesn't really change much as these options are not used anyhow, but
seems tidier.

--- a/configure.in
+++ b/configure.in
@@ -743,8 +743,10 @@ WX_ARG_FEATURE(protocol_file, [  --enable-protocol-file  FILE support in wxProto
 
 WX_ARG_FEATURE(threads,     [  --enable-threads        use threads], wxUSE_THREADS)
 
+if test "$wxUSE_MSW" = 1 ; then
 WX_ARG_ENABLE(iniconf,      [  --enable-iniconf        use wxIniConfig (Win32 only)], wxUSE_INICONF)
 WX_ARG_FEATURE(regkey,      [  --enable-regkey         use wxRegKey class (Win32 only)], wxUSE_REGKEY)
+fi
 
 if test "$wxUSE_GUI" = "yes"; then
 
