Allow using debug help API with non-MSVC compilers
MinGW64 and TDM-GCC come with imagehlp.h and can compile the code using debug
help API too, so enable wxUSE_DBGHELP when using these compilers by default
and also allow enabling it via a configure option.

--- a/setup.h.in
+++ b/setup.h.in
@@ -691,6 +691,12 @@
 #define wxUSE_TIMEPICKCTRL_GENERIC 0
 
 
+#if defined(__VISUALC__) || defined(__MINGW64_TOOLCHAIN__)
+    #define wxUSE_DBGHELP 0
+#else
+    #define wxUSE_DBGHELP 0
+#endif
+
 #define wxUSE_CRASHREPORT 0
 /* --- end MSW options --- */
 
