--- a/configure.in
+++ b/configure.in
@@ -1065,18 +1065,22 @@ if test -n "$wxWITH_CXX"; then
     dnl autoconf, not run, time.
     case "$wxWITH_CXX" in
         11)
+            AX_CXX_COMPILE_STDCXX(11,,optional)
             if test -n "$wxWITH_CXX_IS_OPTIONAL"; then
-                AX_CXX_COMPILE_STDCXX(11,,optional)
-            else
-                AX_CXX_COMPILE_STDCXX(11)
+                if test "$HAVE_CXX11" != 1; then
+                    AC_MSG_FAILURE([C++11 support was requested but is not available])
+                fi
             fi
-            have_cxxN=$HAVE_CXX11
             ;;
 
         14)
             dnl This check can't be optional because we have only --with-cxx=14
             dnl and not --enable-cxx14 option.
             AX_CXX_COMPILE_STDCXX(14)
+
+            dnl Notice that because it's not optional, the macro doesn't define
+            dnl HAVE_CXX14. We don't use it anyhow so far, so it doesn't
+            dnl matter, but we could need to do it ourselves here in the future.
 
             dnl If we have C++14, we necessarily have C++11 too.
             HAVE_CXX11=1
