Also disable deprecation warnings in Obj-C++ code under OS X
Extend the changes of dc10bf6e38ed9144948e8aacaafb236be60f0621 to Obj-C++
code, the intention was always to suppress all of them.

--- a/configure.in
+++ b/configure.in
@@ -7577,6 +7577,10 @@ elif test "$GXX" = yes ; then
     dnl other ones
     if test "$WXGTK3" = 1 -o "$wxUSE_MAC" = 1 ; then
         CXXWARNINGS="$CXXWARNINGS -Wno-deprecated-declarations"
+
+        dnl CXXWARNINGS is not used for Objective-C++ code compilation, but we
+        dnl want to avoid these warnings in it too when building wxOSX.
+        OBJCXXFLAGS="$OBJCXXFLAGS -Wno-deprecated-declarations"
     fi
 fi
 
