Correct configure check for debug help API availability
The check added in 4c691bb12914923833a9c56ed1c18395c2da41ca was not good
enough, some MinGW versions do have imagehlp.h, but don't define all the API
functions we need in it. Luckily, we can check for this simply by verifying
that API_VERSION_NUMBER is big enough.

Closes #17451.

--- a/configure.in
+++ b/configure.in
@@ -7173,6 +7173,9 @@ if test "$USE_WIN32" = 1 ; then
                         #ifndef API_VERSION_NUMBER
                         #error API_VERSION_NUMBER not defined!
                         #endif
+                        #if API_VERSION_NUMBER < 9
+                        #error API_VERSION_NUMBER at least 9 required.
+                        #endif
                     ],
                     wx_cv_lib_debughlp=yes,
                     wx_cv_lib_debughlp=no
