--- a/Makefile.in
+++ b/Makefile.in
@@ -3872,6 +3872,7 @@ COND_USE_GUI_1_ALL_GUI_HEADERS =  \
 	wx/systhemectrl.h \
 	wx/collheaderctrl.h \
 	wx/generic/collheaderctrl.h \
+	wx/itemattr.h \
 	$(LOWLEVEL_HDR) \
 	$(GUI_CORE_HEADERS) \
 	$(ADVANCED_HDR) \
