--- a/samples/widgets/makefile.gcc
+++ b/samples/widgets/makefile.gcc
@@ -44,6 +44,7 @@ WIDGETS_OBJECTS =  \
 	$(OBJS)\widgets_filepicker.o \
 	$(OBJS)\widgets_fontpicker.o \
 	$(OBJS)\widgets_gauge.o \
+	$(OBJS)\widgets_headerctrl.o \
 	$(OBJS)\widgets_hyperlnk.o \
 	$(OBJS)\widgets_itemcontainer.o \
 	$(OBJS)\widgets_listbox.o \
@@ -297,6 +298,9 @@ $(OBJS)\widgets_fontpicker.o: ./fontpicker.cpp
 	$(CXX) -c -o $@ $(WIDGETS_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\widgets_gauge.o: ./gauge.cpp
+	$(CXX) -c -o $@ $(WIDGETS_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\widgets_headerctrl.o: ./headerctrl.cpp
 	$(CXX) -c -o $@ $(WIDGETS_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\widgets_hyperlnk.o: ./hyperlnk.cpp
