--- a/samples/widgets/makefile.vc
+++ b/samples/widgets/makefile.vc
@@ -46,6 +46,7 @@ WIDGETS_OBJECTS =  \
 	$(OBJS)\widgets_filepicker.obj \
 	$(OBJS)\widgets_fontpicker.obj \
 	$(OBJS)\widgets_gauge.obj \
+	$(OBJS)\widgets_headerctrl.obj \
 	$(OBJS)\widgets_hyperlnk.obj \
 	$(OBJS)\widgets_itemcontainer.obj \
 	$(OBJS)\widgets_listbox.obj \
@@ -432,6 +433,9 @@ $(OBJS)\widgets_fontpicker.obj: .\fontpicker.cpp
 
 $(OBJS)\widgets_gauge.obj: .\gauge.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(WIDGETS_CXXFLAGS) .\gauge.cpp
+
+$(OBJS)\widgets_headerctrl.obj: .\headerctrl.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(WIDGETS_CXXFLAGS) .\headerctrl.cpp
 
 $(OBJS)\widgets_hyperlnk.obj: .\hyperlnk.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(WIDGETS_CXXFLAGS) .\hyperlnk.cpp
