--- a/setup.h.in
+++ b/setup.h.in
@@ -570,8 +570,6 @@
 
 #define wxUSE_UIACTIONSIMULATOR 0
 
-#define wxUSE_XTEST 0
-
 
 #define wxUSE_POSTSCRIPT  0
 
@@ -638,6 +636,16 @@
 #define wxUSE_GSTREAMER 0
 
 #define wxUSE_GSTREAMER_PLAYER 0
+
+/*
+   Use XTest extension to implement wxUIActionSimulator?
+
+   Default is 1, it is set to 0 if the necessary headers/libraries are not
+   found by configure.
+
+   Recommended setting: 1, wxUIActionSimulator won't work in wxGTK3 without it.
+ */
+#define wxUSE_XTEST 0
 
 /* --- start MSW options --- */
 
