--- a/src/stc/stc.h.in
+++ b/src/stc/stc.h.in
@@ -273,6 +273,9 @@ public:
     // Retrieve the selected text.
     wxCharBuffer GetSelectedTextRaw();
 
+    // Retrieve the target text.
+    wxCharBuffer GetTargetTextRaw();
+
     // Retrieve a range of text.
     wxCharBuffer GetTextRangeRaw(int startPos, int endPos);
 
