--- a/src/stc/stc.interface.h.in
+++ b/src/stc/stc.interface.h.in
@@ -343,6 +343,11 @@ public:
     wxCharBuffer GetSelectedTextRaw();
 
     /**
+       Retrieve the target text.
+    */
+    wxCharBuffer GetTargetTextRaw();
+
+    /**
        Retrieve a range of text.
     */
     wxCharBuffer GetTextRangeRaw(int startPos, int endPos);
