--- a/samples/makefile.bcc
+++ b/samples/makefile.bcc
@@ -45,7 +45,7 @@ MAKEARGS = -DCC="$(CC)" -DCXX="$(CXX)" -DCFLAGS="$(CFLAGS)" \
 
 ### Targets: ###
 
-all: access animate artprov aui calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event except exec font grid help htlbox html image internat ipc joytest keyboard layout listctrl mdi mediaplayer menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing propgrid regtest render ribbon richtext sashtest scroll shaped sockets sound splash splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer xrc
+all: access animate artprov aui calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event except exec font grid help htlbox html image internat ipc joytest keyboard layout listctrl mdi mediaplayer menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing propgrid regtest render ribbon richtext sashtest scroll secretstore shaped sockets sound splash splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer xrc
 
 clean: 
 	-if exist .\*.obj del .\*.obj
@@ -275,6 +275,10 @@ clean:
 	@echo $(MAKE) -f makefile.bcc $(MAKEARGS) clean >>scroll.bat
 	call scroll.bat
 	@del scroll.bat
+	@echo cd secretstore >secretstore.bat
+	@echo $(MAKE) -f makefile.bcc $(MAKEARGS) clean >>secretstore.bat
+	call secretstore.bat
+	@del secretstore.bat
 	@echo cd shaped >shaped.bat
 	@echo $(MAKE) -f makefile.bcc $(MAKEARGS) clean >>shaped.bat
 	call shaped.bat
@@ -707,6 +711,12 @@ scroll:
 	@echo $(MAKE) -f makefile.bcc $(MAKEARGS) all >>scroll.bat
 	call scroll.bat
 	@del scroll.bat
+
+secretstore:
+	@echo cd secretstore >secretstore.bat
+	@echo $(MAKE) -f makefile.bcc $(MAKEARGS) all >>secretstore.bat
+	call secretstore.bat
+	@del secretstore.bat
 
 shaped: 
 	@echo cd shaped >shaped.bat
