--- a/setup.h.in
+++ b/setup.h.in
@@ -230,6 +230,8 @@
 
 #define wxUSE_FSVOLUME      0
 
+#define wxUSE_SECRETSTORE   0
+
 #define wxUSE_STDPATHS      0
 
 #define wxUSE_TEXTBUFFER    0
